---------------------------------------------------------------------------------------------------
Version: 1.4.12
Date: 2025-11-26
  Fixed:
    - wrong configuration key specified
---------------------------------------------------------------------------------------------------
Version: 1.4.11
Date: 2025-11-26
  Bugfixes:
    - `storage.excluded` might not have been initialized (my mistake putting it into `get_all_excluded()`)
      thanks to @toynbeeidea for reporting it
    - bumped Factorio version to 2.0.72 (latest patch)
---------------------------------------------------------------------------------------------------
Version: 1.4.10
Date: 2025-11-24
  Bugfixes:
    - wrong/old name `ruin_sets` used, the library's name is `ruinsets`
    - `utils.get_ruin_name()` has returned the ruin, not the fixed name
  Changes:
    - introduced debugging of utlities "class"
    - Introduced function `ruinsets.isset()` which checks if a ruin-set with given name is loaded
    - moved temporary `surfaces.excluded` to persisted `storage` so mods like
      BluePrint have it easier
    - registered on event `on_pre_surface_deleted` to re-include a now being
      destroyed surface from the index. This reduces a bit save-game size
    - added debug lines to `utils.get_enemy_force()`
---------------------------------------------------------------------------------------------------
Version: 1.4.9
Date: 2025-11-20
  Bugfix:
    - fixed `utilities.lua:88: bad argument #4 of 5 to 'format' (number expected, got nil)`
  Bugfix (potential):
    - `game.surfaces[name]` might not be initialized at some point
  Minor:
    - Accidently left in some old-lost code `ruin_sets[]='%s'` as `exclude/reinclude_surface`
      only has one parameter
  Documentation:
    - added documentation `SURFACES-PLANETS.md` with code snippets
---------------------------------------------------------------------------------------------------
Version: 1.4.8
Date: 2025-11-02
  Changes: